# ExpectedDamage

./: LICENSE  README.md  TODO  setup.cfg
.github/workflows/: python-package.yml  test2.yml  tests.yml
src/: expected_damage.py
src/ExpectedDamage.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_expected_damage.py
