[metadata]
name = ExpectedDamage
version = 0.0.1
author = Sam Hall
author_email = samwalkerhall@gmail.com
description = Estimate the damage caused by flooding at a risk given depth data over a postcode and a vulnerability curve.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Aethelred-Von-Stick/ExpectedDamage
classifiers = 
	Programming Language :: Python :: 3
	Licence :: OSI Approved :: MIT Licence
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
